kubernetes/apps/datasci/grid-reliance/app/api/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grid-reliance-api
  namespace: datasci
  labels:
    app.kubernetes.io/name: grid-reliance
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: grid-reliance
    app.kubernetes.io/component: api
